--- a/themes/sandbox/layouts/_default/baseof.html
+++ b/themes/sandbox/layouts/_default/baseof.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="8261e837-91d2-433d-ba96-be0441457e4a"></script>
+
   {{ partial "head.html" . }}
 </head>
 <body>
