--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 --bordercl:#be84c5;
 --callouctcolor:#919c7d;
 --hovercolor:#919c7d;
---darkMaincolor: #50fa7b;
+--darkMaincolor: #ffe640;
 }
 html {
   color: #232333;
