upatde du theme avec le rajout des fleurs

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,8 +5,11 @@
 		{{ partialCached "hugomods/umami-analytics/index" . .Params.analyze }}  
 	  </head>
 	<body>
+		{{ partial "background.html" . }}
+
 		<div class="content">
 			{{ partial "head.html" . }}
+
 			
 			<main class="list">
 				<div class="site-description">
