--- a/layouts/partials/background.html
+++ b/layouts/partials/background.html
@@ -1,17 +1,23 @@
-<div class="custom-background">
     <div class="background">
+<!--gauche-->        
         <img class="flower flower1" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower2" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower3" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower4" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower5" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
+        <!--droite-->        
         <img class="flower flower6" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower7" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower8" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower9" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
         <img class="flower flower10" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
+        <!--haut-->  
+        <img class="flower flower11" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
+        <img class="flower flower12" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
+        <!--bas-->  
+        <img class="flower flower13" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
+        <img class="flower flower14" src="{{ "images/Group54.svg" | relURL }}" alt="Mon SVG">
     </div>
-</div>
 
 <style>
 
@@ -22,6 +28,8 @@
     .content{
         background-color: #cebc4a;
         padding: 3rem;
+        margin-top: 4rem;
+        border: 3px dashed black;
     }
 
 
@@ -31,12 +39,17 @@
         position: fixed;
         z-index: -1;
         width: 17rem;
-
+        border: 0px solid #ececec;
     }
+    .flower1 {
+    left: 53px;
+    top: -20px;
+    transform: rotate(5deg);
+}
 
     .flower2 {
-    left: 53px;
-    top: 306px;
+    left: -20px;
+    top: 200px;
     transform: rotate(5deg);
 }
 
@@ -47,26 +60,26 @@
 }
 
 .flower4 {
-    left: 53px;
-    top: 520px;
+    left: -53px;
+    top: 620px;
     transform: rotate(5deg);
 }
 
 .flower5 {
-    left: 30px;
-    top: 720px;
+    left: 100px;
+    top: 820px;
     transform: rotate(5deg);
 }
 
 .flower6 {
     right: 20px;
-    top: 407px;
+    top: -47px;
     transform: rotate(5deg);
 }
 
 .flower7 {
-    right: 53px;
-    top: 515px;
+    right: -53px;
+    top: 150px;
     transform: rotate(5deg);
 }
 
@@ -77,19 +90,38 @@
 }
 
 .flower9 {
-    right: 13px;
-    top: 60px;
+    right: 130px;
+    top: 560px;
     transform: rotate(5deg);
 }
 
 .flower10 {
     right: 13px;
-    top: 30px;
+    top: 730px;
     transform: rotate(5deg);
 }
 
+.flower11 {
+    left: 800px;
+    top: -20px;
+    transform: rotate(12deg);
+}
 
+.flower12 {
+    left: 400px;
+    top: -30px;
+    transform: rotate(81deg);
+}
 
+.flower13 {
+    left: 700px;
+    bottom: -70px;
+    transform: rotate(5deg);
+}
 
-
+.flower14 {
+    left: 300px;
+    bottom: -30px;
+    transform: rotate(5deg);
+}
 </style>
