--- a/layouts/partials/background2.html
+++ b/layouts/partials/background2.html
@@ -20,10 +20,16 @@
         top: -10px;
         /* positionner l'élément en haut à gauche de la fenêtre de navigation */
         left: -10px;
+        width: 100%;
+    height: 100%;
     }
 
     .flower {
-        width: 110vw;
+/*         width: 110vw;
+        height: 110vh; */
         /* largeur égale à la largeur de la fenêtre de navigation */
+        object-fit: cover;
+        width: 100%;
+        height: 100%; 
     }
 </style>
