--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
   </div>
   <div class="footer-info">
     {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} | {{ end }} <a
-      href="https://github.com/athul/archie">Archie thème modifié</a> | Built avec <a href="https://gohugo.io">Hugo</a>
+      href="https://github.com/athul/archie">Thème Archie personnalisé</a> | Propulsé par <a href="https://gohugo.io">Hugo</a>
   </div>
 </footer>
 {{ if not hugo.IsServer }}
